Added custom feature for Web Request #23239
Change-Id: Ib1fee8968e5b534754a7f080995b0ade021f37f9

--- a/static/styles/bootstrap-dsg.scss
+++ b/static/styles/bootstrap-dsg.scss
@@ -123,6 +123,7 @@
   }
 }
 
+@import "bootstrap/_partial-reg";
 @import "../bootstrap/custom/_fancybox";
 @import "../bootstrap/custom/_image";
 @import "../bootstrap/custom/countries";
