--- a/static/bootstrap/custom/quest/_header-footer.scss
+++ b/static/bootstrap/custom/quest/_header-footer.scss
@@ -1142,6 +1142,19 @@ i.menu-indicator {
 //Siamak change this 1200px from 992px
 //Large desktop mode
 @media (min-width: 1200px) {
+	ul.tier3:before, ul.tier4:before {
+		-webkit-box-shadow: 3px 0px 5px 0 rgba(97, 95, 95, 0.49);
+		-moz-box-shadow: 3px 0px 5px 0 rgba(97, 95, 95, 0.49);
+		box-shadow: 3px 0px 5px 0 rgba(97, 95, 95, 0.49);
+		display: block;
+		content: '';
+		position: absolute;
+		top: 0;
+		left: -5px;
+		height: 100%;
+		width: 5px;
+		z-index: 1;
+	}
 	.tier1 li.open > ul.tier2 {
 		display: block;
 	}
@@ -1312,7 +1325,7 @@ i.menu-indicator {
 					}
 					&:hover > ul {
 						position: absolute;
-						left: 280px;
+						left: 279px;
 						top: 0;
 						background: #fff;
 						padding: 0;
@@ -1325,9 +1338,9 @@ i.menu-indicator {
 					float: right;
 					min-height: 101%;
 					width: auto;
-					-webkit-box-shadow: 0px 4px 5px 0px rgba(97, 95, 95, 0.49);
-					-moz-box-shadow: 0px 4px 5px 0px rgba(97, 95, 95, 0.49);
-					box-shadow: 0px 4px 5px 0px rgba(97, 95, 95, 0.49);
+					-webkit-box-shadow: 2px 4px 5px 0px rgba(97, 95, 95, 0.49);
+					-moz-box-shadow: 2px 4px 5px 0px rgba(97, 95, 95, 0.49);
+					box-shadow: 2px 4px 5px 0px rgba(97, 95, 95, 0.49);
 
 				}
 				li {
