converted all media queries min-width/max-width values to use variables.
Change-Id: I4a3e645d4f42327547384a2b925491517cbc56f5

--- a/static/bootstrap/custom/_buttons.scss
+++ b/static/bootstrap/custom/_buttons.scss
@@ -138,7 +138,7 @@
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: $screen-xs-max) {
   /* Only on mobile button will turn into a link */
   .btn-link-xs {
     padding: 0;
@@ -216,7 +216,7 @@ input[type="button"] {
 }
 
 // Added functionality for responsiveness
-@media (max-width: 767px) {
+@media (max-width: $screen-xs-max) {
   .btn-default-xs {
     @include button-variant($btn-default-color, $btn-default-bg, $btn-default-border);
   }
