--- a/static/bootstrap/custom/_custom.scss
+++ b/static/bootstrap/custom/_custom.scss
@@ -187,7 +187,7 @@ iframe {
   justify-content: center;
 }
 
-@media (max-width: 767px) {
+@media (max-width: $screen-xs-max) {
   //Mobile - XS
   #right-rail-form {
     label {
@@ -208,7 +208,7 @@ iframe {
   }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
   //Tablet - SM
   .center-block-sm-only {
     display: block;
@@ -226,7 +226,7 @@ iframe {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $screen-sm-min) {
   //Tablet - SM
   #right-rail-form {
     label {
@@ -259,7 +259,7 @@ iframe {
   }
 }
 
-@media (min-width: 992px) and (max-width: 1199px) {
+@media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
   //Desktop - MD
   .pull-left-md-only {
     float: left;
@@ -269,7 +269,7 @@ iframe {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: $screen-md-min) {
   //Desktop - MD
   #right-rail-form {
     label {
@@ -286,7 +286,7 @@ iframe {
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: $screen-lg-min) {
   .pull-left-lg {
     float: left;
   }
