--- a/static/bootstrap/custom/_forms.scss
+++ b/static/bootstrap/custom/_forms.scss
@@ -636,7 +636,7 @@ select {
     font-size: 14px;
   }
 
-  @media (min-width: 768px) {
+	@media (min-width: $screen-sm-min) {
     display: table;
     width: 100%;
 
