--- a/static/bootstrap/custom/_margin-padding.scss
+++ b/static/bootstrap/custom/_margin-padding.scss
@@ -224,7 +224,7 @@
   margin-left: 30px !important;
 }
 
-@media (max-width: 767px) {
+@media (max-width: $screen-xs-max) {
   //Mobile - XS
   //XS
   #right-rail-form {
@@ -347,7 +347,7 @@
   }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
   //Tablet - SM
   .mt-0-sm-only {
     margin-top: 0 !important;
@@ -405,7 +405,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $screen-sm-min) {
   //Tablet - SM
   .mt-0-sm {
     margin-top: 0 !important;
@@ -482,7 +482,7 @@
   }
 }
 
-@media (min-width: 992px) and (max-width: 1199px) {
+@media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
   //Desktop - MD
   .mt-0-md-only {
     margin-top: 0 !important;
@@ -498,7 +498,7 @@
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: $screen-md-min) {
   //Desktop - MD
   .mt-0-md {
     margin-top: 0 !important;
@@ -520,7 +520,7 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: $screen-lg-min) {
   .mr-20-lg {
     margin-right: 20px !important;
   }
