--- a/static/bootstrap/widgets/_filters.scss
+++ b/static/bootstrap/widgets/_filters.scss
@@ -19,7 +19,7 @@
 }
 
 /*mobile*/
-@media (max-width: 767px) {
+@media (max-width: $screen-xs-max) {
   .filters {
     .collapse{
     display:none;
