--- a/static/bootstrap/custom/_countries.scss
+++ b/static/bootstrap/custom/_countries.scss
@@ -33,7 +33,7 @@
   padding-left: 20px !important;
 }
 
-@media (max-width: 767px) {
+@media (max-width: $screen-xs-max) {
   #country-selector {
     > div {
       display: none;
@@ -53,7 +53,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $screen-sm-min) {
   #country-selector {
     position: relative;
   }
