--- a/static/bootstrap/custom/_type.scss
+++ b/static/bootstrap/custom/_type.scss
@@ -59,7 +59,7 @@ h4, .h4 { font-size: $font-size-h4; }
 h5, .h5 { font-size: $font-size-h5; }
 h6, .h6 { font-size: $font-size-h6; }
 
-@media (min-width: 768px) { //SM
+@media (min-width: $screen-sm-min) { //SM
   h1, .h1, h2, .h2, h3, .h3 {
     margin: ($line-height-computed * 1.5) 0;
   }
@@ -80,7 +80,7 @@ h6, .h6 { font-size: $font-size-h6; }
   }
 }
 
-@media (min-width: 992px) { //MD
+@media (min-width: $screen-md-min) { //MD
   h1, .h1 {
     font-size: $font-size-h1 * 1.333333; //32px
   }
@@ -89,7 +89,7 @@ h6, .h6 { font-size: $font-size-h6; }
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: $screen-lg-min) {
 
 }
 
@@ -260,7 +260,7 @@ ol {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $screen-sm-min) {
   .list-inline-sm {
     @include list-unstyled;
     margin-left: -5px;
@@ -398,7 +398,7 @@ blockquote {
   }
 }
 
-@media (min-width: 768px) { //Tablet & Desktop (sm, md, lg)
+@media (min-width: $screen-sm-min) { //Tablet & Desktop (sm, md, lg)
   blockquote {
     font-size: $blockquote-font-size;
     margin: 0 0 $line-height-computed;
