--- a/static/bootstrap/widgets/_featured-products.scss
+++ b/static/bootstrap/widgets/_featured-products.scss
@@ -23,7 +23,7 @@
 }
 
 /*mobile*/
-@media (max-width: 767px) {
+@media (max-width: $screen-xs-max) {
 	.featured-products {
 		ul li {
       &:nth-child(3) .polaris-divider, &:nth-child(9) .polaris-divider {
@@ -37,7 +37,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $screen-sm-min) {
 	.featured-products {
 		.pagination-container {
 			margin: 0 -15px;
