--- a/static/bootstrap/widgets/_listing-entries.scss
+++ b/static/bootstrap/widgets/_listing-entries.scss
@@ -36,7 +36,7 @@
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: $screen-xs-max) {
   .listing-entries {
     .col-xs-12 {
       width: 360px;
@@ -50,7 +50,7 @@
   }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
   .listing-entries {
     .img-crop {
       height: 166px;
@@ -58,7 +58,7 @@
   }
 }
 
-@media (min-width: 992px) and (max-width: 1199px) {
+@media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
   .listing-entries {
     .img-crop {
       height: 161px;
@@ -66,7 +66,7 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: $screen-lg-min) {
   .listing-entries {
     .img-crop {
       height: 197px;
