--- a/static/bootstrap/widgets/_optional-dropdown.scss
+++ b/static/bootstrap/widgets/_optional-dropdown.scss
@@ -35,7 +35,7 @@
 }
 
 /*mobile*/
-@media (max-width: 767px) {
+@media (max-width: $screen-xs-max) {
   .off-canvas-content .panel-wrapper {
     margin: 0 15px;
     border-bottom: 1px solid $dell-gray;
