--- a/static/bootstrap/custom/_custom-affix-scroll-nav-top.scss
+++ b/static/bootstrap/custom/_custom-affix-scroll-nav-top.scss
@@ -75,7 +75,7 @@
 	}
 }
 
-@media (max-width: 767px) {
+@media (max-width: $screen-xs-max) {
   //xs
   #affix-nav.affix-list-xs{
     border:0;
@@ -109,7 +109,7 @@
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: $screen-md-min) {
   //MD-LG
   #affix-nav {
     font-size: 16px;
