--- a/static/bootstrap/custom/_variables-quest.scss
+++ b/static/bootstrap/custom/_variables-quest.scss
@@ -56,7 +56,7 @@ $top-link: $darker-gray; //Navigation link color
 $top-link-hover: $text-orange; //Navigation link hover color
 $top-link-hover-t2: #333; //Navigation link hover color tier 2
 
-$nav-subLinks-hover-bg-t2: #e3e3e3; //Navigation sublink hover bg tier 2
+$nav-subLinks-hover-bg-t2: #eeeeee; //Navigation sublink hover bg tier 2
 $nav-subLinks-hover-color-t2: #333333; //Navigation sublink hover color tier 2
 
 $top-search-bg: #f9f9f9; //Top search bg
@@ -66,7 +66,7 @@ $top-search-btn-color: $white; //Top search button color
 $top-search-btn-hover-color: $white; //Top search button hover color
 $top-search-border-color: #eeeeee; //Top search border color
 
-$top-search-input-border-color: $natural-gray; //Top search input border color
+$top-search-input-border-color: #ccc; //Top search input border color
 
 $top-user-dropdown-bg: #f9f9f9; //User dropdown bg
 $top-user-dropdown-color: #444; //User dropdown color
